use java 7 and 8 features: Objects.equals and hashCode, try-with-resources and other (#755)